tests/baselines/reference/project/nestedLocalModuleWithRecursiveTypecheck/amd/nestedLocalModuleWithRecursiveTypecheck.errors.txt
test1.ts(3,23): error TS1147: Import declarations in a namespace cannot reference a module.
test2.ts(5,27): error TS1147: Import declarations in a namespace cannot reference a module.


==== test2.ts (1 errors) ====
    export var $;
    
    
    export module Yo {
        import test = require("test1");
                              ~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
        test.x;
    
        export function y() { return 0; }
    }
==== test1.ts (1 errors) ====
    module myModule {
     
     import foo = require("test2");
                          ~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
    
     //console.log(foo.$);
    
     var z = foo.Yo.y();
    
    }
    
    export var x = 0;
    